# boot-experiments

./: .gitignore  LICENSE  Makefile  README.md  createImage.py
apk/: apk.static
configs/: grub_live.cfg.j2  kernel-config
hashtool/: Cargo.toml
hashtool/src/: main.rs
linuxrc/: Cargo.toml
ovmf/: efivars.fd
ptgen/: ptgen  ptgen.c
scripts/: createImage.py  mk_initrd.sh
