[package]
name = "hashtool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.129", features = ["derive"] } 
serde_json = "1.0"
digest = "0.9.0"
sha3 = "0.9.1"
sha2 = "0.9.5"
clap = "3.0.0-beta.4"